adjust 23 to 230, fix alignment of the text under the numbers in section 2, hide the last 2 elements in the first section of the expertise area

--- a/src/scss/partials/_section2.scss
+++ b/src/scss/partials/_section2.scss
@@ -67,6 +67,8 @@
   color: $teal;
   font-size: 30px;
   z-index: 1;
+  width: 300px;
+  margin: auto;
 }
 
 .story-section2-p2 {
